# grob

./: 404.html  CONTRIBUTING.md  Makefile  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: main.yml
cli/: index.html
docs/: cli.md  index.md  modules.md  user_guide.md
examples/: README.md
examples/different_nesting_levels/: README.md
examples/different_variadicities/: README.md  command.sh  description.txt  epilog.txt  result.json
examples/different_variadicities_multiple_levels/: README.md  command.sh  description.txt  epilog.txt  result.json
examples/inputs_across_dirs/: README.md  command.sh  description.txt  result.json
examples/multiple_over_multiple_tags/: README.md  command.sh  description.txt  epilog.txt  result.json
examples/one_input_per_dir/: README.md  command.sh  description.txt  result.json
examples/one_input_per_multi_dirs/: README.md  command.sh  result.json
examples/one_tag_different_dirs/: README.md  command.sh  description.txt  result.json
examples/one_tag_same_dir/: README.md  command.sh  description.txt  epilog.txt  result.json
examples/optional_tags/: README.md  command.sh  description.txt  result.json
examples/two_tags_same_dir/: README.md  command.sh  description.txt  epilog.txt  result.json
examples/variadic_files/: README.md
grob/: __init__.py  types.py
grob/cli/: __init__.py  app.py
grob/core/: errors.py  files.py  finder.py  frozendict.py  group_validation.py  key_formatter.py  key_formatters.py  output_formatters.py  output_writers.py  parsers.py  path_parser.py  tags.py  walker.py
modules/: index.html
scripts/: update_examples.sh
search/: search_index.json
tests/: test_cli.py  test_foo.py
tests/core/: test_files.py  test_group_validation.py  test_parsers.py  (+6 more)
user_guide/: index.html
(+12 files in other folders)
